--- a/src/OpenMod.Installer.RocketMod.csproj
+++ b/src/OpenMod.Installer.RocketMod.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
