--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,8 +31,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release v${{ steps.get_version.outputs.VERSION }}
+        tag_name: ${{ github.event.inputs.version }}
+        release_name: Release v${{ github.event.inputs.version }}
         draft: false
         prerelease: false      
     - name: Upload release asset
@@ -41,6 +41,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src/bin/Release/net461/OpenMod.Installer.RocketMod.dll
-        asset_name: OpenMod.Installer.RocketMod-v${{ steps.get_version.outputs.VERSION }}.dll
+        asset_path: ./src/bin/Release/netstandard2.0/OpenMod.Installer.RocketMod.dll
+        asset_name: OpenMod.Installer.RocketMod-v${{ github.event.inputs.version }}.dll
         asset_content_type: application/octet-stream
