--- a/src/OpenMod.Installer.RocketMod.csproj
+++ b/src/OpenMod.Installer.RocketMod.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Version>0.0.0</Version>
     <TargetFrameworks>net461</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
