--- a/src/OpenMod.Installer.RocketMod.csproj
+++ b/src/OpenMod.Installer.RocketMod.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nito.AsyncEx.Context" Version="5.1.0" />
-    <PackageReference Include="OpenMod.NuGet" Version="2.3.8" />
+    <PackageReference Include="OpenMod.NuGet" Version="3.0.0-beta1" />
     <PackageReference Include="OpenMod.UnityEngine.Redist" Version="2019.4.10" />
     <PackageReference Include="OpenMod.Unturned.Redist" Version="3.20.14" />
   </ItemGroup>
