--- a/src/OpenMod.Installer.RocketMod.csproj
+++ b/src/OpenMod.Installer.RocketMod.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nito.AsyncEx.Context" Version="5.1.0" />
-    <PackageReference Include="OpenMod.Core" Version="3.0.0-beta1" />
-    <PackageReference Include="OpenMod.NuGet" Version="3.0.0-beta1" />
-    <PackageReference Include="OpenMod.UnityEngine.Redist" Version="2019.4.10" />
-    <PackageReference Include="OpenMod.Unturned.Redist" Version="3.20.14" />
+    <PackageReference Include="Nito.AsyncEx.Context" Version="5.1.2" />
+    <PackageReference Include="OpenMod.Core" Version="3.7.4" />
+    <PackageReference Include="OpenMod.NuGet" Version="3.7.4" />
+    <PackageReference Include="OpenMod.UnityEngine.Redist" Version="2021.3.29.1" />
+    <PackageReference Include="OpenMod.Unturned.Redist" Version="3.23.12.3" />
   </ItemGroup>
 
   <ItemGroup>
